# AutoOCR

./: Cargo.toml  LICENSE  Project Structure.md  README.md  build.rs
src/: main.rs
wix/: License.rtf  main.wxs
