[package]
name = "auto-ocr"
version = "0.1.0"
edition = "2024"
authors = ["Matteo Bosshard | HardBoss07 | M4tt3o"]
description = "Get your OCR from images in your Clipboard with a simple key combination"
repository = "https://github.com/HardBoss07/AutoOCR"
license = "MIT"
keywords = ["macros", "ocr"]
categories = ["command-line-utilities", "development-tools::debugging"]
readme = "README.md"

[dependencies]
arboard = "3.6.1"
device_query = "4.0.1"
image = "0.25.9"
leptess = "0.14.0"
tray-icon = "0.21.3"
winit = "0.30.12"
winrt-notification = "0.5.1"
